<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OneDayOnePic</string>
    <string name="service_name">OneDayOnePic</string>
    <string name="title_activity_main">One Day One Pic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="change_picture">Next Pic</string>
    <string name="app_alert">OneDayOnePic Alert</string>
    <string name="ttw_service">Service</string>
    <string name="on">Mode Auto</string>
    <string name="off">Mode Manuel</string>
    
    <string name="title">One Day One Pic</string>
        
    <string name="msg_categorie_saved">Categorie Saved</string>
    <string name="msg_service_on">Service Auto</string>
    <string name="msg_service_off">Service Off</string>
    
    <string name="msg_service_wallpaper_changed">Wallpaper changed</string>
    <string name="msg_invalid_api_response">Error: Invalid Server Response.</string>
    

</resources>
