<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/general_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/opaque_white" >

     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:background="@drawable/layout_bg" >
    
         <TextView
             android:id="@+id/titleTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/title"
             android:textSize="25sp"
             android:textColor="@color/text_color" />
         
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/serviceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/ttw_service"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/on_off_tb"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textColor="@color/text_color"
            android:onClick="on_offService" />

    </LinearLayout>
    
	<Spinner
	    android:id="@+id/sprCategorie"
	    android:layout_width="120dp"
	    android:layout_height="wrap_content"
	    android:textSize="12sp" />
	
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="10dp">
   
		<ProgressBar
		    android:id="@+id/pgbRefreshing"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:visibility="invisible"
		    android:theme="@style/AppTheme" />
	
		<Button
		    android:id="@+id/btnChangePic"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:onClick="changePicture"
		    android:paddingLeft="10dp"
		    android:textColor="@color/text_color"
		    android:text="@string/change_picture" />
		
	</LinearLayout>
	
	</LinearLayout>
	
</LinearLayout>
