<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/general_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/opaque_white" >

     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="@drawable/layout_bg" >
    
         <TextView
             android:id="@+id/titleTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/title"
             android:textSize="@dimen/title"
             android:textColor="@color/text_color" />
         
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="30dp">

        <ToggleButton
            android:id="@+id/on_off_tb"
            android:layout_height="wrap_content"
            android:layout_width="150dp"
            
            android:textOff="@string/off"
            android:textSize="@dimen/text"
            android:textOn="@string/on"
            android:textColor="@color/text_color"
            android:onClick="on_offService" />

    </LinearLayout>
    
	<Spinner
	    android:id="@+id/sprCategorie"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/text" />
	
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20dp">
   
		<ProgressBar
		    android:id="@+id/pgbRefreshing"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:visibility="invisible"
		    android:theme="@style/AppTheme" />
	
		<Button
		    android:id="@+id/btnChangePic"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:onClick="changePicture"
		    android:paddingLeft="10dp"
		    android:textColor="@color/text_color"
		    android:text="@string/change_picture" 
		    android:textSize="@dimen/text" />
		
	</LinearLayout>
	
	</LinearLayout>
	
</LinearLayout>
